--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -48,3 +48,26 @@ block main
               td
                 button(class="btn btn-warning btn-sm") Sửa
                 button(class="btn btn-danger btn-sm ml-1") Xóa
+
+  nav
+    ul(class="pagination")
+      if(objectPagination.currentPage > 1)
+        li(class="page-item")
+          button(
+            class="page-link"
+            button-pagination=objectPagination.currentPage-1
+          ) Trang trước
+      
+      - for (var i = 1; i <= objectPagination.totalPage; i++)
+        li(class=`page-item ${objectPagination.currentPage == i ? "active" : ""}`)
+          button(
+            class="page-link"
+            button-pagination=i
+          ) #{i}
+      
+      if(objectPagination.currentPage < objectPagination.totalPage)
+        li(class="page-item")
+          button(
+            class="page-link"
+            button-pagination=objectPagination.currentPage+1
+          ) Kế tiếp
