--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -20,3 +20,22 @@ block main
               .inner-price-new #{item.priceNew}$
               .inner-price-old #{item.price}$
               .inner-discount -#{item.discountPercentage}%
+
+    .row
+      .col-12
+        +box-head("Sản phẩm mới")
+
+    .row
+      each item in productsNew
+        .col-4.mb-3
+          .product-item
+            .inner-image
+              a(href=`/products/detail/${item.slug}`)
+                img(src=item.thumbnail, alt=item.title)
+            .inner-content
+              h3.inner-title
+                a(href=`/products/detail/${item.slug}`) #{item.title}
+              .inner-price-new #{item.priceNew}$
+              .inner-price-old #{item.price}$
+              .inner-discount -#{item.discountPercentage}%
+    
