--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -36,3 +36,5 @@ header.header
               +sub-menu(layoutProductCategory)
             li
               a(href="/cart") Giỏ hàng (#{miniCart ? miniCart.products.length : 0})
+            li
+              a(href="/user/register") Đăng ký
