--- a/public/css/style.css
+++ b/public/css/style.css
@@ -309,3 +309,14 @@
   cursor: pointer;
 }
 /* End chat */
+
+/* tooltip */
+.tooltip {
+  visibility: hidden;
+}
+
+.tooltip.shown {
+  visibility: visible;
+  opacity: 1;
+}
+/* End tooltip */
