--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -27,7 +27,8 @@ block main
                       img(src=image)
 
             div(class="inner-list-typing")
-          div(class="custom-file-container" data-upload-id="upload-images")
+          .inner-preview-images
+            div(class="custom-file-container" data-upload-id="upload-images")
           .inner-foot
             form(
               class="inner-form"
@@ -40,6 +41,10 @@ block main
               )
               span(class="button-icon btn btn-light mx-2")
                 i(class="fa-regular fa-face-smile")
+              label(
+                class="btn btn-light mr-2 mb-0"
+                for="file-upload-with-preview-upload-images"
+              ) <i class="fa-regular fa-image"></i>
               button
                 i.fa-solid.fa-paper-plane
   
