--- a/views/client/pages/users/not-friend.pug
+++ b/views/client/pages/users/not-friend.pug
@@ -11,19 +11,22 @@ block main
         +box-head("Danh sách người dùng")
 
     .row
-      .col-6
-        div(class="box-user")
-          div(class="inner-avatar")
-            img(
-              src="https://robohash.org/hicveldicta.png"
-              alt="Le Van A"
-            )
-          div(class="inner-info")
-            div(class="inner-name") Le Van A
-            div(class="inner-buttons")
-              button(
-                class="btn btn-sm btn-primary mr-1"
-              ) Kết bạn
-              button(
-	              class="btn btn-sm btn-secondary mr-1"
-              ) Hủy
+      each user in users
+        .col-6
+          div(class="box-user")
+            div(class="inner-avatar")
+              img(
+                src="https://robohash.org/hicveldicta.png"
+                alt=user.fullName
+              )
+            div(class="inner-info")
+              div(class="inner-name") #{user.fullName}
+              div(class="inner-buttons")
+                button(
+                  class="btn btn-sm btn-primary mr-1"
+                  btn-add-friend=user.id
+                ) Kết bạn
+                button(
+                  class="btn btn-sm btn-secondary mr-1"
+                  btn-cancel-friend=user.id
+                ) Hủy
