--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -31,5 +31,7 @@ html
     script(src="/socket.io/socket.io.js")
     script(src="/js/socket.js")
     //- End SocketIO
+    
+    script(src="/js/users.js")
 
     script(type="module" src="/js/script.js")
