--- a/views/client/pages/users/accept.pug
+++ b/views/client/pages/users/accept.pug
@@ -35,3 +35,8 @@ block main
                   btn-deleted-friend
                   disabled
                 ) Đã xóa
+                button(
+                  class="btn btn-sm btn-primary mr-1"
+                  btn-accepted-friend
+                  disabled
+                ) Đã chấp nhận
